--- a/ReactorPhysics_Python/testPython.ipynb
+++ b/ReactorPhysics_Python/testPython.ipynb
@@ -52,6 +52,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Start of extractNwords()\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -59,8 +69,9 @@
    "source": [
     "\"\"\"\n",
     "=======================================================\n",
-    "The purpose of this is function not 100% clear, but \n",
-    "it plays an important role for \"extract_mf3\" and \n",
+    "The ENDF data within each record is often divided into \n",
+    "fields or \"words\" of a fixed width. Therefore, this\n",
+    "function plays an important role for \"extract_mf3\" and \n",
     "\"extract_mf6\" functions for extracting data from \n",
     "the ENDF file.\n",
     "-------------------------------------------------------\n",
@@ -89,7 +100,7 @@
     "=======================================================\n",
     "\"\"\"\n",
     "def extractNwords(n, iRow, m):\n",
-    "    k = 0\n",
+    "    k = 0   # counter for filling vector a\n",
     "    iRowNew = iRow\n",
     "    a = np.empty((1,n), dtype=np.float64)\n",
     "    for ii in range(int(n/6)):  # read lines with 6 words each\n",
@@ -98,8 +109,8 @@
     "            k += 1\n",
     "        iRowNew += 1\n",
     "\n",
-    "    if (n - int(n/6)*6) == 0:\n",
-    "        iRowNew -= 1    \n",
+    "    if (n - int(n/6)*6) == 0:   # check if there's a partial line with less than 6 words\n",
+    "        iRowNew -= 1    # if yes, stay on the same row for next call to extractNwords()\n",
     "\n",
     "    for jj in range((n-int(n/6)*6)):  # read the last line with less than 6 words\n",
     "        a[0][k] = m[iRowNew][jj]\n",
@@ -109,32 +120,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Start of extract_mf3()\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[10.42469 ,  4.513115,  3.177173, ...,  0.      ,  0.      ,\n",
-       "         0.      ],\n",
-       "       [ 9.954398,  4.388016,  3.169668, ...,  0.      ,  0.      ,\n",
-       "         0.      ],\n",
-       "       [ 9.914734,  4.361569,  3.167052, ...,  0.      ,  0.      ,\n",
-       "         0.      ],\n",
-       "       [ 9.910362,  4.358269,  3.166685, ...,  0.      ,  0.      ,\n",
-       "         0.      ],\n",
-       "       [ 9.909923,  4.357931,  3.166647, ...,  0.      ,  0.      ,\n",
-       "         0.      ],\n",
-       "       [ 9.909876,  4.357897,  3.166643, ...,  0.      ,  0.      ,\n",
-       "         0.      ]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "==========================================================\n",
@@ -187,23 +186,89 @@
     "        sig = 0\n",
     "    return sig\n",
     "\n",
+    "#====================================================\n",
     "# Example to check against MATLAB\n",
-    "mt = 102  # set the value of mt\n",
-    "iTemp = 1  # set the value of ntt\n",
+    "#mt = 102  # set the value of mt\n",
+    "#iTemp = 1  # set the value of ntt\n",
     "m = df.to_numpy()  # convert DataFrame to NumPy array\n",
-    "sig = extract_mf3(mt, iTemp, m)  # apply the function to the numpy array\n",
-    "sig"
+    "#sig = extract_mf3(mt, iTemp, m)  # apply the function to the numpy array\n",
+    "#sig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([     2,  87889, 176463, 265663])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#===================================================\n",
+    "### Small testing section\n",
+    "#===================================================\n",
+    "nRow = m.shape[0]\n",
+    "#temp = np.empty(4, dtype=np.float64) # index of group 'to'\n",
+    "temp = []\n",
+    "nTemp = 0  # number of temperatures\n",
+    "for iRow in range(nRow):\n",
+    "    if m[iRow, 7] == 1 and m[iRow, 8] == 451 and m[iRow, 9] == 2:\n",
+    "        nTemp += 1\n",
+    "        #temp[nTemp-1] = m[iRow, 0] # subtract 1 from nTemp since Python uses 0-based indexing\n",
+    "        temp.append(iRow)\n",
+    "        print(nTemp)\n",
+    "temp = np.array(temp)\n",
+    "temp\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Start of extract_mf6()\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7, 6, 4636)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
-    "NOTE: Work in progress! \n",
     "==============================================================\n",
+    "NOTE: More on MF 6:\n",
     "MF 6 stands for \"Cross Sections\" in an ENDF (Evaluated Nuclear\n",
     "Data File) type of file. This section contains the evaluated \n",
     "cross-section data, such as the neutron-induced reaction cross \n",
@@ -214,37 +279,58 @@
     "This information is essential for the calculation of the neut-\n",
     "ron transport in nuclear reactors and other applications.\n",
     "--------------------------------------------------------------\n",
+    "MAIN TASKS:\n",
+    " 1. Initialize variables (iRow, nTemp, ifrom, ito, sig)\n",
+    " 2. Loop through each row of the ENDF file (until the end is \n",
+    " reached)\n",
+    " 3. If the current row contains the MF/MT we are looking for, \n",
+    " extract the data\n",
+    " 4. Store the data in a list (sig)\n",
+    "--------------------------------------------------------------\n",
     "INPUT:\n",
     "mt  - integer; reaction;\n",
     "ntt - integer; index for temperature value;\n",
-    "m - 2D NumPy array.\n",
+    "m - 2D NumPy array; contains the ENDF data\n",
     "--------------------------------------------------------------\n",
     "OUTPUT:\n",
     "ifrom - 1D NumPy array;\n",
     "ito   - 1D NumPy array;\n",
-    "sig   - dictionary (maybe?); list of dimensional data\n",
+    "sig   - 3D NumPy array;\n",
     "==============================================================\n",
     "\"\"\"\n",
     "def extract_mf6(mt, ntt, m):\n",
-    "    iRow = 0 # row number\n",
+    "    iRow = 0 # row number               \n",
     "    nTemp = 0 # number of temperatures\n",
-    "    ifrom = np.array([], dtype=np.float64) # index of group 'from'\n",
-    "    ito = np.array([], dtype=np.float64) # index of group 'to'\n",
-    "    sig = {} # dictionary to store the data\n",
-    "    \n",
+    "    # \"ifrom\" and \"ito\" will be both defined as empty lists\n",
+    "    # and bc depending on the CSV file, their sizes can change.\n",
+    "    # Later, they will be made into a NumPy arrays, bc it's \n",
+    "    # fast way to do scientific computing and can be easily \n",
+    "    # converted into other libraries, if need be.\n",
+    "    ifrom = [] # index of group 'from'\n",
+    "    ito = [] # index of group 'to'\n",
+    "    #sig = [] # list to store the data\n",
+    "    nSig0 = None\n",
+    "    nLgn = None\n",
+    "\n",
     "    while m[iRow,6] != -1: # up to the end\n",
     "        if m[iRow,7] == 6 and m[iRow,8] == mt: # find the row with mf=6 & mt\n",
     "            if m[iRow,9] == 1: # this is the first line of mf=6 & mt: initialize\n",
     "                nonz = 0 # number of nonzeros\n",
-    "                nLgn = m[iRow,2] # number of Legendre components\n",
-    "                nSig0 = m[iRow,3] # number of sigma-zeros\n",
+    "                nLgn = int(m[iRow,2]) # number of Legendre components\n",
+    "                nSig0 = int(m[iRow,3]) # number of sigma-zeros\n",
+    "\n",
+    "                # Prolly the most confusing command in the entire function.\n",
+    "                # \"sig\" is a bit more tricky compared to \"ifrom\" and \"ito\".\n",
+    "                # Essentially, it is still an undefined list, with undefinded \n",
+    "                # lists inside it, but all it does is set up an empty 3D matrix.\n",
+    "                sig = [[[] for _ in range(nSig0)] for _ in range(nLgn)] # initialize sig\n",
     "\n",
     "                iRow += 1\n",
     "                nTemp += 1 # temperature index\n",
-    "            ng2 = m[iRow,2] # number of secondary positions\n",
-    "            ig2lo = m[iRow,3] # index to lowest nonzero group\n",
-    "            nw = m[iRow,4] # number of words to be read\n",
-    "            ig = m[iRow,5] # current group index\n",
+    "            ng2 = int(m[iRow,2]) # number of secondary positions\n",
+    "            ig2lo = int(m[iRow,3]) # index to lowest nonzero group\n",
+    "            nw = int(m[iRow,4]) # number of words to be read\n",
+    "            ig = int(m[iRow,5]) # current group index\n",
     "\n",
     "            iRow += 1     \n",
     "            a, iRowNew = extractNwords(nw, iRow, m) # extract nw words in vector a\n",
@@ -256,16 +342,62 @@
     "                    nonz += 1\n",
     "                    ifrom.append(ig)\n",
     "                    ito.append(iTo)\n",
-    "                    for iSig0 in range(1, nSig0+1):\n",
-    "                        for iLgn in range(1, nLgn+1):\n",
+    "                    for iSig0 in range(1, int(nSig0+1)):\n",
+    "                        for iLgn in range(1, int(nLgn+1)):\n",
     "                            k += 1\n",
-    "                            # TODO: save dimesion info to \"sig\"\n",
-    "\n",
-    "            iRow += 1\n",
+    "                            sig[iLgn-1][iSig0-1].append(a[0][k-1])\n",
+    "                        if nLgn == 1:\n",
+    "                            sig[1][iSig0-1].append(0)\n",
+    "                            sig[2][iSig0-1].append(0)\n",
+    "        iRow += 1\n",
     "    if nTemp == 0:\n",
     "        sig = 0\n",
     "\n",
-    "ifrom2, ito2, sig2 = extract_mf6(16, iTemp, m)"
+    "    # Convert lists to NumPy arrays for faster processing\n",
+    "    ifrom = np.array(ifrom) \n",
+    "    ito   = np.array(ito) \n",
+    "    sig   = np.array(sig)   # Make that list within lists into a 3D Matrix\n",
+    "\n",
+    "    # Return the extracted data as well as the indices\n",
+    "    return ifrom, ito, sig\n",
+    "\n",
+    "#=====================================================\n",
+    "# Testing/Exapmple\n",
+    "for iTemp in range(nTemp+1):\n",
+    "    ifromE, itoE, sigE = extract_mf6(2, iTemp, m)\n",
+    "\n",
+    "np.shape(sigE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[33.02231   ,  0.5085915 , 13.90506   , ...,  0.03873961,\n",
+       "         0.2169527 ,  0.6499559 ],\n",
+       "       [31.53762   ,  0.3326434 , 13.68883   , ...,  0.03873959,\n",
+       "         0.2169525 ,  0.6499558 ],\n",
+       "       [31.41244   ,  0.3035914 , 13.63501   , ...,  0.03873955,\n",
+       "         0.2169516 ,  0.649957  ],\n",
+       "       [31.39864   ,  0.3001369 , 13.62812   , ...,  0.03873916,\n",
+       "         0.2169421 ,  0.6499682 ],\n",
+       "       [31.39725   ,  0.2997849 , 13.62742   , ...,  0.03873572,\n",
+       "         0.2168595 ,  0.6500662 ],\n",
+       "       [31.39712   ,  0.2997496 , 13.62735   , ...,  0.0387214 ,\n",
+       "         0.2165163 ,  0.6504741 ]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigE[0]"
    ]
   }
  ],
@@ -285,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
