--- a/ReactorPhysics_Python/01.Micro_Python_Test/testPython.ipynb
+++ b/ReactorPhysics_Python/01.Micro_Python_Test/testPython.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "788197"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,9 +85,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_105150/2508889665.py:2: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv('H_001.CSV', delimiter=';', header=None)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          0             1          2       3         4        5      6    7   \n",
+      "0       NaN           NaN        NaN     NaN       NaN      NaN    1.0  0.0  \\\n",
+      "1  1001.000  9.991673e-01    0.00000  1.0000   -1.0000  1.00000  125.0  1.0   \n",
+      "2   293.600  0.000000e+00  421.00000  0.0000  425.0000  0.00000  125.0  1.0   \n",
+      "3     0.000  1.000000e+10    0.00001  0.0001    0.0005  0.00075  125.0  1.0   \n",
+      "4     0.001  1.200000e-03    0.00150  0.0020    0.0025  0.00300  125.0  1.0   \n",
+      "\n",
+      "       8    9  \n",
+      "0    0.0  0.0  \n",
+      "1  451.0  1.0  \n",
+      "2  451.0  2.0  \n",
+      "3  451.0  3.0  \n",
+      "4  451.0  4.0   \n",
+      "                0    1    2    3    4    5      6    7      8        9\n",
+      "922819  0.000002  0.0  0.0  0.0  0.0  0.0  125.0  6.0  222.0   9042.0\n",
+      "922820  0.000000  0.0  NaN  NaN  NaN  NaN  125.0  6.0  222.0   9043.0\n",
+      "922821       NaN  NaN  NaN  NaN  NaN  NaN  125.0  6.0    0.0  99999.0\n",
+      "922822       NaN  NaN  NaN  NaN  NaN  NaN    0.0  0.0    0.0      0.0\n",
+      "922823       NaN  NaN  NaN  NaN  NaN  NaN   -1.0  0.0    0.0      0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Read the CSV data file into a Pandas DataFrame object\n",
     "data = pd.read_csv('H_001.CSV', delimiter=';', header=None)\n",
@@ -109,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,11 +436,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.448080e-12, 1.749050e-12, 2.195220e-12, ..., 2.634757e-04,\n",
+       "        8.612891e-05, 3.975174e-09]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ifrom2, ito2, sig2 = extract_mf6(16, 3, mm)  # Extract mf=6 mt=16 ((n,2n) matrix)\n"
+    "ifrom2, ito2, sig2 = extract_mf6(16, 3, mm)  # Extract mf=6 mt=16 ((n,2n) matrix)\n",
+    "sig2[0]"
    ]
   },
   {
@@ -699,11 +746,13 @@
     "        #hdf.create_dataset('temperature', data=temp[iTemp])\n",
     "        hdf.attrs['temperature'] = temp[iTemp]\n",
     "\n",
-    "        # extract the energy group boundaries and sigma-zeros\n",
+    "        # extract and sigma-zeros and write into metadata\n",
     "        nSig0 = int(m[1, 3])\n",
+    "        hdf.attrs['nSig0'] = nSig0\n",
+    "\n",
+    "        # extract the energy group boundaries \n",
     "        a = extractNwords(int(1 + nSig0 + (ng+1)), 3, m)\n",
     "        \n",
-    "\n",
     "        # write energy group boundaries to the HDF5 file as a dataset\n",
     "        eg_G = hdf.create_group(\"en_G\")\n",
     "        eg_G.create_dataset('eg', data=a[0][int(1+nSig0) : int(2+nSig0+ng)])\n",
@@ -1020,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
