--- a/ReactorPhysics_Python/01.Micro_Python_Test/testPython.ipynb
+++ b/ReactorPhysics_Python/01.Micro_Python_Test/testPython.ipynb
@@ -269,22 +269,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of extractNwordsOLD(): 0.002238 seconds\n",
-      "Execution time of extractNwords: 0.000056 seconds\n",
-      "Speedup: 39.94x\n"
+      "Number of iterations: 10000\n",
+      "Execution time of extractNwordsOLD(): 0.364629 seconds\n",
+      "Execution time of extractNwords(): 0.012216 seconds\n",
+      "Speedup: 29.85x\n"
      ]
     }
    ],
    "source": [
     "# Set the number of iterations\n",
-    "num_iterations = 10\n",
+    "num_iterations = 10000\n",
+    "print(f\"Number of iterations: {num_iterations}\")\n",
     "\n",
     "# Create a function to run the benchmark\n",
     "def benchmark(func, *args, **kwargs):\n",
@@ -294,13 +296,13 @@
     "    end_time = time.time()\n",
     "    return end_time - start_time\n",
     "\n",
-    "# Run the benchmark for extract_mf6OLD\n",
+    "# Run the benchmark for extractNwordsOLD()\n",
     "old_time = benchmark(extractNwordsOLD,6 * 6 * 2, 338582, mmm)\n",
     "print(f\"Execution time of extractNwordsOLD(): {old_time:.6f} seconds\")\n",
     "\n",
     "# Run the benchmark for extract_mf6PARA\n",
     "new_time = benchmark(extractNwords, 6 * 6 * 2, 338582, mmm)\n",
-    "print(f\"Execution time of extractNwords: {new_time:.6f} seconds\")\n",
+    "print(f\"Execution time of extractNwords(): {new_time:.6f} seconds\")\n",
     "\n",
     "# Calculate the speedup\n",
     "speedup = old_time / new_time\n",
@@ -639,11 +641,11 @@
     "    end_time = time.time()\n",
     "    return end_time - start_time\n",
     "\n",
-    "# Run the benchmark for extract_mf6OLD\n",
+    "# Run the benchmark for extract_mf3OLD()\n",
     "old_time = benchmark(extract_mf3OLD, 16, 3, mm)\n",
     "print(f\"Execution time of extract_mf3OLD(): {old_time:.6f} seconds\")\n",
     "\n",
-    "# Run the benchmark for extract_mf6PARA\n",
+    "# Run the benchmark for extract_mf3PARA()\n",
     "new_time = benchmark(extract_mf3PARA, 16, 3, mm)\n",
     "print(f\"Execution time of extract_mf3PARA(): {new_time:.6f} seconds\")\n",
     "\n",
@@ -975,22 +977,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of extract_mf6OLD(): 7.917130 seconds\n",
-      "Execution time of extract_mf6(): 0.224834 seconds\n",
-      "Speedup: 35.21x\n"
+      "Number of iterations: 10\n",
+      "Execution time of extract_mf6OLD(): 7.299300 seconds\n",
+      "Execution time of extract_mf6(): 0.220924 seconds\n",
+      "Speedup: 33.04x\n"
      ]
     }
    ],
    "source": [
     "# Set the number of iterations\n",
     "num_iterations = 10\n",
+    "print(f\"Number of iterations: {num_iterations}\")\n",
     "\n",
     "# Create a function to run the benchmark\n",
     "def benchmark(func, *args, **kwargs):\n",
