--- a/ReactorPhysics_Python/01.Micro_Python_Test/testPython.ipynb
+++ b/ReactorPhysics_Python/01.Micro_Python_Test/testPython.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "        0.000000e+00, 0.000000e+00]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "788197"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "'# Read the CSV data file into a Pandas DataFrame object\\ndata = pd.read_csv(\\'H_001.CSV\\', delimiter=\\';\\', header=None)\\ndf = data.replace(r\\'^\\\\s*$\\', np.nan, regex=True).astype(float)   # df contains empty cells, \\n                                                                # replace them with \"NaN\"\\n# Print the updated DataFrame\\nprint(df.head(), \"\\n\", df.tail())   # First and last 5 rows.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -277,9 +277,9 @@
      "output_type": "stream",
      "text": [
       "Number of iterations: 10000\n",
-      "Execution time of extractNwordsOLD(): 0.364629 seconds\n",
-      "Execution time of extractNwords(): 0.012216 seconds\n",
-      "Speedup: 29.85x\n"
+      "Execution time of extractNwordsOLD(): 0.381559 seconds\n",
+      "Execution time of extractNwords(): 0.009431 seconds\n",
+      "Speedup: 40.46x\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
     "old_time = benchmark(extractNwordsOLD,6 * 6 * 2, 338582, mmm)\n",
     "print(f\"Execution time of extractNwordsOLD(): {old_time:.6f} seconds\")\n",
     "\n",
-    "# Run the benchmark for extract_mf6PARA\n",
+    "# Run the benchmark for extractNwordsPARA\n",
     "new_time = benchmark(extractNwords, 6 * 6 * 2, 338582, mmm)\n",
     "print(f\"Execution time of extractNwords(): {new_time:.6f} seconds\")\n",
     "\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,148 +473,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6.922211e+00, 2.996802e+00, 2.109710e+00, 1.784290e+00,\n",
-       "        1.592003e+00, 1.436881e+00, 1.261683e+00, 1.113044e+00,\n",
-       "        1.006896e+00, 8.921132e-01, 7.870374e-01, 6.671491e-01,\n",
-       "        5.643636e-01, 3.983492e-01, 3.177407e-01, 2.827227e-01,\n",
-       "        2.492809e-01, 2.254469e-01, 2.073508e-01, 1.930415e-01,\n",
-       "        1.812906e-01, 1.714778e-01, 1.580288e-01, 1.428546e-01,\n",
-       "        1.313363e-01, 1.222274e-01, 1.147839e-01, 1.085420e-01,\n",
-       "        1.032163e-01, 9.860602e-02, 9.454343e-02, 9.096634e-02,\n",
-       "        8.776697e-02, 8.488326e-02, 8.112945e-02, 7.673580e-02,\n",
-       "        7.296006e-02, 6.970541e-02, 6.750874e-02, 6.619215e-02,\n",
-       "        6.434769e-02, 6.208649e-02, 6.004264e-02, 5.818588e-02,\n",
-       "        5.649489e-02, 5.531855e-02, 5.456164e-02, 5.385955e-02,\n",
-       "        5.316663e-02, 5.269294e-02, 5.244059e-02, 5.218813e-02,\n",
-       "        5.193579e-02, 5.168358e-02, 5.143138e-02, 5.118466e-02,\n",
-       "        5.095305e-02, 5.072215e-02, 5.049126e-02, 5.026014e-02,\n",
-       "        5.002902e-02, 4.980015e-02, 4.958565e-02, 4.937302e-02,\n",
-       "        4.900187e-02, 4.847555e-02, 4.797951e-02, 4.748856e-02,\n",
-       "        4.680524e-02, 4.592575e-02, 4.505994e-02, 4.427847e-02,\n",
-       "        4.351131e-02, 4.252224e-02, 4.132821e-02, 4.023510e-02,\n",
-       "        3.922625e-02, 3.833161e-02, 3.764305e-02, 3.682874e-02,\n",
-       "        3.591304e-02, 3.519548e-02, 3.454292e-02, 3.393369e-02,\n",
-       "        3.328689e-02, 3.264581e-02, 3.203651e-02, 3.146623e-02,\n",
-       "        3.091781e-02, 3.057958e-02, 3.037948e-02, 3.000624e-02,\n",
-       "        2.899455e-02, 2.780679e-02, 2.688819e-02, 2.531757e-02,\n",
-       "        2.393591e-02, 2.317654e-02, 2.214459e-02, 2.134745e-02,\n",
-       "        2.093092e-02, 2.053743e-02, 2.015016e-02, 1.986865e-02,\n",
-       "        1.915673e-02, 1.803386e-02, 1.710712e-02, 1.613537e-02,\n",
-       "        1.544488e-02, 1.500934e-02, 1.448133e-02, 1.408575e-02,\n",
-       "        1.375872e-02, 1.340218e-02, 1.300902e-02, 1.254616e-02,\n",
-       "        1.219931e-02, 1.196567e-02, 1.167215e-02, 1.133213e-02,\n",
-       "        1.084917e-02, 1.031675e-02, 9.856890e-03, 9.546462e-03,\n",
-       "        9.410662e-03, 9.266633e-03, 9.125393e-03, 9.035753e-03,\n",
-       "        8.921401e-03, 8.778594e-03, 8.630454e-03, 8.507247e-03,\n",
-       "        8.421129e-03, 8.324413e-03, 8.181326e-03, 8.037009e-03,\n",
-       "        7.911509e-03, 7.779180e-03, 7.653139e-03, 7.566015e-03,\n",
-       "        7.476190e-03, 7.374564e-03, 7.274882e-03, 7.049549e-03,\n",
-       "        6.817458e-03, 6.655798e-03, 6.491612e-03, 6.325468e-03,\n",
-       "        6.140111e-03, 5.980998e-03, 5.866161e-03, 5.697607e-03,\n",
-       "        5.421860e-03, 5.179127e-03, 5.000675e-03, 4.880310e-03,\n",
-       "        4.808489e-03, 4.308408e-03, 3.835725e-03, 3.732542e-03,\n",
-       "        3.652978e-03, 3.521273e-03, 3.261462e-03, 3.070193e-03,\n",
-       "        2.612423e-03, 2.135745e-03, 2.021501e-03, 1.852815e-03,\n",
-       "        1.680785e-03, 1.639700e-03, 1.601528e-03, 1.563683e-03,\n",
-       "        1.527353e-03, 1.492506e-03, 1.458579e-03, 1.424472e-03,\n",
-       "        1.391446e-03, 1.362117e-03, 1.345751e-03, 1.334986e-03,\n",
-       "        1.319587e-03, 1.296406e-03, 1.266543e-03, 1.240331e-03,\n",
-       "        1.226119e-03, 1.208231e-03, 1.180248e-03, 1.152541e-03,\n",
-       "        1.125227e-03, 1.110330e-03, 1.097087e-03, 1.072713e-03,\n",
-       "        1.047226e-03, 1.027922e-03, 1.016038e-03, 9.986496e-04,\n",
-       "        9.749879e-04, 9.535126e-04, 9.309538e-04, 9.072068e-04,\n",
-       "        8.859129e-04, 8.648133e-04, 8.480116e-04, 8.377492e-04,\n",
-       "        8.288779e-04, 8.189300e-04, 8.046639e-04, 7.851210e-04,\n",
-       "        7.660734e-04, 7.474891e-04, 7.293494e-04, 7.116435e-04,\n",
-       "        6.943658e-04, 6.775096e-04, 6.618133e-04, 6.455503e-04,\n",
-       "        6.287960e-04, 6.131819e-04, 5.980650e-04, 5.832395e-04,\n",
-       "        5.716381e-04, 5.627301e-04, 5.528561e-04, 5.404184e-04,\n",
-       "        5.267043e-04, 5.140948e-04, 5.045901e-04, 4.974582e-04,\n",
-       "        4.890346e-04, 4.790493e-04, 4.685979e-04, 4.576879e-04,\n",
-       "        4.462711e-04, 4.361903e-04, 4.300720e-04, 4.218500e-04,\n",
-       "        4.087755e-04, 3.951910e-04, 3.846819e-04, 3.755361e-04,\n",
-       "        3.683010e-04, 3.620227e-04, 3.545635e-04, 3.455452e-04,\n",
-       "        3.346393e-04, 3.258963e-04, 3.200655e-04, 3.139721e-04,\n",
-       "        3.076297e-04, 3.013505e-04, 2.944153e-04, 2.867821e-04,\n",
-       "        2.791681e-04, 2.717871e-04, 2.634520e-04, 2.541020e-04,\n",
-       "        2.449476e-04, 2.353617e-04, 2.253269e-04, 2.148641e-04,\n",
-       "        2.063844e-04, 2.011882e-04, 1.967667e-04, 1.940249e-04,\n",
-       "        1.902321e-04, 1.845234e-04, 1.815057e-04, 1.788586e-04,\n",
-       "        1.750176e-04, 1.710972e-04, 1.650614e-04, 1.583654e-04,\n",
-       "        1.526951e-04, 1.479825e-04, 1.432732e-04, 1.383420e-04,\n",
-       "        1.353760e-04, 1.334028e-04, 1.306959e-04, 1.272820e-04,\n",
-       "        1.234395e-04, 1.214918e-04, 1.199619e-04, 1.179657e-04,\n",
-       "        1.148206e-04, 1.105487e-04, 1.060852e-04, 1.024172e-04,\n",
-       "        9.958696e-05, 9.662410e-05, 9.352735e-05, 9.028429e-05,\n",
-       "        8.791695e-05, 8.618354e-05, 8.334147e-05, 7.962340e-05,\n",
-       "        7.612357e-05, 7.431591e-05, 7.302494e-05, 7.079701e-05,\n",
-       "        6.846404e-05, 6.602398e-05, 6.347389e-05, 6.073229e-05,\n",
-       "        5.863253e-05, 5.725161e-05, 5.576925e-05, 5.421998e-05,\n",
-       "        5.259846e-05, 5.090050e-05, 4.951858e-05, 4.860868e-05,\n",
-       "        4.726177e-05, 4.532642e-05, 4.403140e-05, 4.314196e-05,\n",
-       "        4.217607e-05, 4.112964e-05, 4.007177e-05, 3.896490e-05,\n",
-       "        3.833746e-05, 3.802563e-05, 3.772543e-05, 3.743220e-05,\n",
-       "        3.713312e-05, 3.682672e-05, 3.637881e-05, 3.605722e-05,\n",
-       "        3.561822e-05, 3.528810e-05, 3.511082e-05, 3.477373e-05,\n",
-       "        3.459794e-05, 3.443518e-05, 3.425775e-05, 3.407084e-05,\n",
-       "        3.389274e-05, 3.380625e-05, 3.364412e-05, 3.353513e-05,\n",
-       "        3.348416e-05, 3.342361e-05, 3.333934e-05, 3.330579e-05,\n",
-       "        3.327167e-05, 3.325724e-05, 3.328515e-05, 3.331742e-05,\n",
-       "        3.334849e-05, 3.335950e-05, 3.338242e-05, 3.342006e-05,\n",
-       "        3.344970e-05, 3.351322e-05, 3.363185e-05, 3.371792e-05,\n",
-       "        3.380678e-05, 3.397010e-05, 3.407060e-05, 3.426435e-05,\n",
-       "        3.454955e-05, 3.477160e-05, 3.497456e-05, 3.509560e-05,\n",
-       "        3.517947e-05, 3.529085e-05, 3.545460e-05, 3.556711e-05,\n",
-       "        3.570500e-05, 3.592813e-05, 3.612663e-05, 3.633174e-05,\n",
-       "        3.645502e-05, 3.653550e-05, 3.667173e-05, 3.681846e-05,\n",
-       "        3.693911e-05, 3.704416e-05, 3.710428e-05, 3.714295e-05,\n",
-       "        3.717040e-05, 3.718586e-05, 3.720495e-05, 3.720675e-05,\n",
-       "        3.718879e-05, 3.714660e-05, 3.707958e-05, 3.698327e-05,\n",
-       "        3.687010e-05, 3.673652e-05, 3.658438e-05, 3.641529e-05,\n",
-       "        3.623132e-05, 3.606386e-05, 3.596050e-05, 3.582306e-05,\n",
-       "        3.559606e-05, 3.536701e-05, 3.514196e-05, 3.490171e-05,\n",
-       "        3.465781e-05, 3.441133e-05, 3.416541e-05, 3.398590e-05,\n",
-       "        3.386059e-05, 3.367038e-05, 3.342277e-05, 3.317843e-05,\n",
-       "        3.293647e-05, 3.273431e-05, 3.261462e-05, 3.245771e-05,\n",
-       "        3.222075e-05, 3.198490e-05, 3.174945e-05, 3.120282e-05,\n",
-       "        3.011606e-05, 2.973534e-05, 2.936037e-05, 2.879520e-05,\n",
-       "        2.794004e-05]])"
+       "(1, 421)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sigC= extract_mf3PARA(102, 7, mm)\n",
-    "sigC"
+    "sigC.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "abc = extract_mf3OLD(102, 7, mm)\n",
-    "cba = extract_mf3PARA(102, 7, mm)\n",
-    "for i in range(len(cba[0])):\n",
-    "    if cba[0][i] != abc[0][i]:\n",
-    "        print(f\"Difference found at index {i}: cba[0][{i}] = {cba[0][i]}, abc[0][{i}] = {abc[0][i]}\")\n",
+    "abc = extract_mf3OLD(102, 7, mmm)\n",
+    "cba = extract_mf3PARA(102, 7, mmm)\n",
+    "for i in range(len(cba)):\n",
+    "    if cba[i] != abc[i]:\n",
+    "        print(f\"Difference found at index {i}: cba[{i}] = {cba[i]}, abc[{i}] = {abc[i]}\")\n",
     "    #else:\n",
     "    #    print(\"No differences were found.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
