--- a/ReactorPhysics_Python/02.Macro.XS.421g/testPWR_mix.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testPWR_mix.ipynb
@@ -792,7 +792,8 @@
     }
    ],
    "source": [
-    "\"\"\"# Define the equations as strings\n",
+    "\"\"\"\n",
+    "# Define the equations as strings // INPUT\n",
     "psi_str = \"(1 + np.sqrt(np.sqrt(M1 / M2) * k1 / k2)) ** 2 / np.sqrt(8 * (1 + M1 / M2))\"\n",
     "gap_kGasMixFun_str = \"k[0] * x[0] / (psi(k[0], k[0], M[0], M[0]) * x[0] + psi(k[0], k[1], M[0], M[1]) * x[1] + psi(k[0], k[2], M[0], M[2]) * x[2]) + \\\n",
     "                     k[1] * x[1] / (psi(k[1], k[0], M[1], M[0]) * x[0] + psi(k[1], k[1], M[1], M[1]) * x[1] + psi(k[1], k[2], M[1], M[2]) * x[2]) + \\\n",
@@ -1551,10 +1552,10 @@
     "\n",
     "sigS = np.zeros((3, 12, 421, 421))\n",
     "\n",
-    "temp = 600 # Kelvin\n",
+    "#temp = 600 # Kelvin\n",
     "for i in range(3):\n",
     "    for j in range(12):\n",
-    "        sigS[i][j] = interpSigS(i, isotopes12[j], temp, PWRmix['sig0'][j, :])\n",
+    "        sigS[i][j] = interpSigS(i, isotopes12[j], Zry['temp'], PWRmix['sig0'][j, :])\n",
     "\n",
     "print('Done.')\n",
     "\n",
