--- a/ReactorPhysics_Python/02.Macro.XS.421g/testZry.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testZry.ipynb
@@ -643,6 +643,26 @@
     "Zry[\"sig0\"] = sigmaZeros(sigTtab, sig0tab, aDen, SigEscape)\n",
     "print('Done.')\n",
     "\n",
+    "print('Interpolation of microscopic cross sections for the found sigma-zeros. ')\n",
+    "sigCtab = prepareIntoND(\n",
+    "          prep2D(hdf5_Zr90.get('sigC_G')), \n",
+    "          prep2D(hdf5_Zr91.get('sigC_G')), \n",
+    "          prep2D(hdf5_Zr92.get('sigC_G')), \n",
+    "          prep2D(hdf5_Zr94.get('sigC_G')),\n",
+    "          prep2D(hdf5_Zr96.get('sigC_G'))\n",
+    "          )\n",
+    "\n",
+    "sigL_sizes = []\n",
+    "for i in range(len(Zry[\"isoName\"])):\n",
+    "    sigL_data = np.array(eval(f'hdf5_{Zry[\"isoName\"][i]}').get('sigL_G').get('sigL'))\n",
+    "    sigL_sizes.append(len(sigL_data))\n",
+    "\n",
+    "maxL_size = max(sigL_sizes)\n",
+    "sigLtab = np.zeros((len(Zry[\"isoName\"]), maxL_size, Zry[\"ng\"]))\n",
+    "col_start = 0\n",
+    "for i, size in enumerate(sigL_sizes):\n",
+    "    sigL_data = np.array(eval(f'hdf5_{Zry[\"isoName\"][i]}').get('sigL_G').get('sigL'))\n",
+    "    sigLtab[i, :size, col_start:col_start+421] = sigL_data.reshape(size, 421)\n",
     "\n",
     "# Close HDF5 files\n",
     "hdf5_Zr90.close()\n",
